# prob-seq-cli

./: LICENSE  README.md  prob-seq-cli.cabal  stack.yaml
app/: CLI.hs  ConstructionFiles.hs  Main.hs  ReadConstructionFiles.hs  WriteConstructionFiles.hs
examples/: ex1.stb  ex2.stb  ex3.stb  ex4.stb  nanopore-ex1.stb  nanopore-ex2.stb  nanopore-ex3.stb
