name:                prob-seq-cli
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rybern/prob-seq-cli#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan Bernstein
maintainer:          ryan.bernstein@columbia.edu
copyright:           MIT
category:            General
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable prob-seq
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       CLI
                     , ConstructionFiles
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , prob-seq
                     , sparse-lin-alg
                     , vector
                     , MonadRandom
                     , random
                     , monad-loops
                     , tinylang
                     , text
                     , filepath
                     , optparse-applicative

source-repository head
  type:     git
  location: https://github.com/rybern/prob-seq-cli
